2009-08-12  Sergio Villar Senin  <svillar@igalia.com>

	* libtinymail/tny-fs-stream-cache.c (get_available_size)
	(get_free_space, remove_old_files)
	(tny_fs_stream_cache_get_stream, tny_fs_stream_cache_remove)
	(fill_from_cache): protect the access to priv->cached_files to
	make the TnyFsStream thread-safe

2009-08-10  Sergio Villar Senin  <svillar@igalia.com>

	* libtinymail-camel/camel-lite/camel/ (cmd_tocache): protect a
	buffer passed to strlen with the null character '\0' in order to
	fix a conditional jump reported by valgrind

2009-08-07  Sergio Villar Senin  <svillar@igalia.com>

	* libtinymailui-gtk/tny-gtk-folder-list-store.c
	(recurse_folders_async_cb): remove the folders already present on
	model that are not listed by provider

	* libtinymail-camel/tny-camel-folder.c
	(tny_camel_folder_get_folders_default): do not reuse iter when
	getting the folders and refresh=TRUE

2009-08-05  Sergio Villar Senin  <svillar@igalia.com>

	* libtinymail-camel/tny-camel-folder.c (folder_changed): replaced
	_tny_camel_header_set_as_memory calls by _tny_camel_header_set_camel_message_info

	* libtinymail-camel/tny-camel-header.c
	(_tny_camel_header_set_camel_message_info): add a hook to finalize
	of summary object. This will prevent double frees of the folder summary.

	* libtinymail-camel/tny-camel-folder.c (notify_folder_store_observers_about_in_idle)
	(notify_folder_observers_about_in_idle): check that session is not
	NULL before adding a reference to it as it could cause an invalid dereference

	* libtinymail/tny-fs-stream-cache.c (fill_from_cache): fixed a
	memory leak.

	* libtinymail-camel/tny-camel-folder.c
	(transfer_msgs_thread_clean): clear exception to prevent memory leaks.

2009-08-03  Sergio Villar Senin  <svillar@igalia.com>

	* libtinymail-camel/tny-camel-folder.c
	(transfer_msgs_thread_clean): removed invalid code

	* camel/providers/imap/camel-imap-folder.c
	(process_idle_untagged_response): fixed a small memory leak
