@@ -6,6 +6,10 @@
 	(fill_from_cache): protect the access to priv->cached_files to
 	make the TnyFsStream thread-safe
 
+	* libedataserver/e-iconv.c (e_iconv_charset_name): added a
+	security check to prevent SIGSEVs caused by specially malformed
+	huge charset names.
+
 2009-08-10  Sergio Villar Senin  <svillar@igalia.com>
 
 	* libtinymail-camel/camel-lite/camel/ (cmd_tocache): protect a
